--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@mantine/carousel": "^8.3.9",
     "@mantine/core": "^8.3.9",
     "@mantine/form": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
     "@mantinex/dev-icons": "^2.0.0",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@tabler/icons-react": "^3.35.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "react": "^19.2.0",
