--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-github-calendar": "^5.0.0",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
